--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /OddOrEven/build/
 /UseScanner/nbproject/private/
 /UseScanner/build/
+/TextDataType/nbproject/private/
+/TextDataType/build/
+/fibonacciOne/nbproject/private/
