--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@
 /TextDataType/nbproject/private/
 /TextDataType/build/
 /fibonacciOne/nbproject/private/
+/NameAgeSalary/nbproject/private/
+/NameAgeSalary/build/
+/SecondsConvert/nbproject/private/
+/SecondsConvert/build/
+/SecondsConvert1/nbproject/private/
+/SecondsConvert1/build/
+/MakeCalculator/nbproject/private/
+/MakeCalculator/build/
+/CurrentTime/nbproject/private/
+/CurrentTime/build/
+/CurrentTime1/nbproject/private/
+/CurrentTime1/build/
