--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /CurrentTime/build/
 /CurrentTime1/nbproject/private/
 /CurrentTime1/build/
+/CalculateInterest/nbproject/private/
+/CalculateInterest/build/
