--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 /CurrentTime1/build/
 /CalculateInterest/nbproject/private/
 /CalculateInterest/build/
+/CalculayrInterestOne/nbproject/private/
+/CalculayrInterestOne/build/
+/RadiousInputByUser/nbproject/private/
+/RadiousInputByUser/build/
+/RadiousInputByUserOne/nbproject/private/
+/RadiousInputByUserOne/build/
+/RadiousUserByInputTwoSir/nbproject/private/
+/RadiousUserByInputTwoSir/build/
+/ResultShow/nbproject/private/
+/ResultShow/build/
