--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@
 /RadiousUserByInputTwoSir/build/
 /ResultShow/nbproject/private/
 /ResultShow/build/
+/EvenOrOddOne/nbproject/private/
+/EvenOrOddOne/build/
+/VowelAndConstant/nbproject/private/
+/VowelAndConstant/build/
