--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@
 /EvenOrOddOne/build/
 /VowelAndConstant/nbproject/private/
 /VowelAndConstant/build/
+/PositiveAndNegativeNumber/nbproject/private/
+/PositiveAndNegativeNumber/build/
+/GreatestOfTwoNumber/nbproject/private/
+/GreatestOfTwoNumber/build/
