--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,15 @@
 /PositiveAndNegativeNumber/build/
 /GreatestOfTwoNumber/nbproject/private/
 /GreatestOfTwoNumber/build/
+/LeapYear/nbproject/private/
+/LeapYear/build/
+/SwitchChineseZodiac/nbproject/private/
+/SwitchChineseZodiac/build/
+/CalculatorUsingSwitch/nbproject/private/
+/CalculatorUsingSwitch/build/
+/CalculatorusingSwitchOne/nbproject/private/
+/CalculatorusingSwitchOne/build/
+/VowelAndConsonantUsingSwitch/nbproject/private/
+/VowelAndConsonantUsingSwitch/build/
+/RandomNumber/nbproject/private/
+/RandomNumber/build/
