--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,10 @@
 /VowelAndConsonantUsingSwitch/build/
 /RandomNumber/nbproject/private/
 /RandomNumber/build/
+/VowelAndConsonanTwo/nbproject/private/
+/VowelAndConsonanTwo/build/
+/RockPaperScissor/nbproject/private/
+/LearnString/nbproject/private/
+/LearnString/build/
+/ConcateUse/nbproject/private/
+/ConcateUse/build/
