--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,15 @@
 /LearnString/build/
 /ConcateUse/nbproject/private/
 /ConcateUse/build/
+/ShowingDateMonthAndYearUsingSwitch/nbproject/private/
+/GuessNumberOneTiqme/nbproject/private/
+/GuessNumberOneTiqme/build/
+/ShowingDateMonthAndYearUsingSwitch/build/
+/FactorialUsingDoWhile/nbproject/private/
+/FactorialUsingDoWhile/build/
+/PrimeNumberUsingForLoop/nbproject/private/
+/PrimeNumberUsingForLoop/build/
+/PrimeNumberUsingForLoopOne/nbproject/private/
+/PrimeNumberUsingForLoopOne/build/
+/UseContinue/nbproject/private/
+/UseContinue/build/
