--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@
 /PrimeNumberUsingForLoopOne/build/
 /UseContinue/nbproject/private/
 /UseContinue/build/
+/SelfPractice/nbproject/private/
+/SelfPractice/build/
