--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,10 @@
 /UseContinue/build/
 /SelfPractice/nbproject/private/
 /SelfPractice/build/
+/OnetoHundredUsingForLoop/nbproject/private/
+/LearnMethod/nbproject/private/
+/LearnMethod/build/
+/FindPrimeNumber/nbproject/private/
+/FindPrimeNumber/build/
+/FactorialNumberByUsingMethod/nbproject/private/
+/FactorialNumberByUsingMethod/build/
