--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@
 /FindPrimeNumber/build/
 /FactorialNumberByUsingMethod/nbproject/private/
 /FactorialNumberByUsingMethod/build/
+/PrimeNumberUsingForLoopTwo/nbproject/private/
+/PrimeNumberUsingForLoopTwo/build/
